bug fix and spacing changes on object map title and subtitle

--- a/app/modules/new-dashboard/components/object-map-new/style.scss
+++ b/app/modules/new-dashboard/components/object-map-new/style.scss
@@ -91,7 +91,7 @@
     position: absolute;
     z-index: 1;    
     top: 10px;
-    padding: 10px;
+    padding: .5rem 10px 0px 10px;
     border-radius: 5px;
     background-color: #253446;
     left: 0;
